--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
  	<head>
-		 <!-- Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-N9SD88');</script>
-		<!-- End Google Tag Manager -->
+		<!-- Google Tag Manager -->
+		  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		  })(window,document,'script','dataLayer','GTM-N9SD88');</script>
+		  <!-- End Google Tag Manager -->
     	<meta charset="utf-8">
     	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	    <meta name="robots" content="noindex">
@@ -33,7 +33,25 @@
 	    <meta name="theme-color" content="#ffffff">
  	</head>
  	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9SD88"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+
     	<div id="app"></div>
+
+
+    	<script src="/src/assets/js/libs/s_code.js"></script>
+      	<script language="javascript" type="text/javascript">
+	       s.pageName = 'flashSale-DAVID-310816-lp';
+	       s.channel = 'OfertasIrresistibles';
+	       s.server = 'www.copaair.com';
+	       s.prop20 = 'English';
+	       if(!s.eVar24)
+	        s.eVar24='flashSale-DAVID-310816-lp';
+	      var s_code = s.t();
+	      if (s_code) document.write(s_code);
+    	</script>
     	<script src="dist/build.js"></script>
  	</body>
 </html>
