--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	    <meta name="robots" content="noindex">
 	    <title>Aproveche estas tarifas y viaje  ✈</title>
-		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.2.3/css/bulma.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.2.3/css/bulma.min.css.map">
 	    <link rel="apple-touch-icon" sizes="57x57" href="/copa-theme/images/icons/fav/apple-icon-57x57.png">
 	    <link rel="apple-touch-icon" sizes="60x60" href="/copa-theme/images/icons/fav/apple-icon-60x60.png">
@@ -41,6 +41,8 @@
     	<div id="app"></div>
 
 
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     	<script src="/src/assets/js/libs/s_code.js"></script>
       	<script language="javascript" type="text/javascript">
 	       s.pageName = 'flashSale-DAVID-310816-lp';
